# lib3ds

./: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  configure  configure.in  lib3ds-config.1  lib3ds.m4
debian/: changelog  control  copyright  lib3ds-1-3.install  lib3ds-dev.install  lib3ds-dev.links  not-installed  rules  watch
debian/patches/: 01_fixmanpage.patch  series
debian/tests/: build1  control
example/: Makefile.am  Makefile.in  example.cpp
examples/: 3ds2m.c  3ds2rib.1  3ds2rib.c  3dsdump.1  3dsdump.c  Makefile.am  Makefile.in  lib3ds2m.1  lib3ds2m.c  lib3ds2pov.c  lib3ds2rib.1  lib3ds2rib.c  lib3dsdump.1  lib3dsdump.c
lib3ds/: Makefile.am  Makefile.in  atmosphere.c  atmosphere.h  background.c  background.h  camera.c  camera.h  chunk.c  chunk.h  chunktable.h  chunktable.sed  ease.c  ease.h  file.c  file.h  float.c  float.h  light.c  light.h  material.c  material.h  matrix.c  matrix.h  mesh.c  mesh.h  node.c  node.h  quat.c  quat.h  readwrite.c  readwrite.h  shadow.c  shadow.h  tcb.c  tcb.h  tracks.c  tracks.h  types.doc  types.h  (+3 more)
msvc/: 3ds2m.dsp  3ds2rib.dsp  3dsdump.dsp  3dsplay.dsp  Lib3ds.dsp  Lib3ds.dsw  Makefile.am  Makefile.in  all.dsp  lib3ds.dsp  lib3ds.dsw  lib3ds2m.dsp  lib3ds2rib.dsp  lib3ds_dll.dsp  lib3ds_lib.dsp  lib3dsdump.dsp
src/: Makefile.am  Makefile.in  lib3ds.cpp  lib3ds.h
