dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.am)

#
# Making releases:
#   LIB3DS_MICRO_VERSION += 1;
#   LIB3DS_INTERFACE_AGE += 1;
#   LIB3DS_BINARY_AGE += 1;
# if any functions have been added, set LIB3DS_INTERFACE_AGE to 0.
# if backwards compatibility has been broken,
# set LIB3DS_BINARY_AGE and LIB3DS_INTERFACE_AGE to 0.
#
LIB3DS_MAJOR_VERSION=0
LIB3DS_MINOR_VERSION=1
LIB3DS_MICRO_VERSION=1
LIB3DS_INTERFACE_AGE=1
LIB3DS_BINARY_AGE=1
LIB3DS_VERSION=$LIB3DS_MAJOR_VERSION.$LIB3DS_MINOR_VERSION.$LIB3DS_MICRO_VERSION
AC_SUBST(LIB3DS_MAJOR_VERSION)
AC_SUBST(LIB3DS_MINOR_VERSION)
AC_SUBST(LIB3DS_MICRO_VERSION)
AC_SUBST(LIB3DS_INTERFACE_AGE)
AC_SUBST(LIB3DS_BINARY_AGE)
AC_SUBST(LIB3DS_VERSION)

# libtool versioning
LT_RELEASE=$LIB3DS_MAJOR_VERSION.$LIB3DS_MINOR_VERSION
LT_CURRENT=`expr $LIB3DS_MICRO_VERSION - $LIB3DS_INTERFACE_AGE`
LT_REVISION=$LIB3DS_INTERFACE_AGE
LT_AGE=`expr $LIB3DS_BINARY_AGE - $LIB3DS_INTERFACE_AGE`
AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(lib3ds, $LIB3DS_VERSION)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_C_BIGENDIAN
AM_DISABLE_STATIC
AM_PROG_LIBTOOL

AM_PATH_MATH3D(0.1.0,,AC_MSG_ERROR([Cannot find proper Math3d version]))
AM_PATH_GLIB(1.2.0,,AC_MSG_ERROR([Cannot find proper glib version]))
AM_PATH_GTK(1.2.0,,AC_MSG_ERROR([Cannot find proper gtk version]))
AM_PATH_GTKGL(,AC_MSG_ERROR([Cannot find proper GtkGlArea]))

AC_ARG_ENABLE(debug-mode,   
[  --enable-debug-mode     enable debugging mode],
  [
    CFLAGS="-D_DEBUG -g3 -Wall"
    CXXFLAGS="-D_DEBUG -g3 -Wall"
  ],[
    CFLAGS="-O2 "
    CXXFLAGS="-O2"
  ]) 

AC_OUTPUT([ \
  lib3ds-config \
  Makefile \
  src/Makefile \
  example/Makefile
],[chmod a+x lib3ds-config])





